# alphabuild

./: .gitignore  GEMINI.md  README.md  analyze_mock_data.py  analyze_profile.py  analyze_results.py  benchmark_fem_solvers.py  benchmark_fem_vs_nn.py  benchmark_npu_batch.py  check_dof_ordering.py  check_dolfinx_api.py  data_harvest_log.txt  debug_dolfinx.py  debug_simp_log_ep0.csv  environment.yml  environment_arch_intel.yml  extract_mock_data.py  extract_mock_episode.py  fenitop_comparison_report.md  harvest.prof  harvest_opt.prof  inspect_db_tensor.py  inspect_json.py  inspect_mock_tensor.py  profile.stats  profile_optimized.stats  pyproject.toml  pytest.ini  run_data_harvest.py  run_harvest_v1.py  run_self_play.py  run_selfplay.py  run_validation.sh  selfplay_output.txt  setup_arch_intel.sh  setup_wsl.sh  simple_mpi.py  technical_report_full_domain.md  technical_report_simp_mbb.md  test_improvements.py  (+7 more)
.github/workflows/: ci.yml  tests.yml
alphabuilder/: check_dolfinx.py  check_linear_problem.py  check_monai.py  merge_databases.py  monai_sig.txt  setup_wsl.sh
alphabuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alphabuilder/agents_docs/: academic_scribe.md  alpha_architect.md  alphabuilder_v1_1_spec.md  alphabuilder_v2_0_spec.md  app_specs.md  blueprint.md  colab_workflows.md  contexto_crucial.md  neural_vision.md  physics_core.md  project_improvements_and_benchmarks.md  (+2 more)
docs/: augmentation_strategy_decision.md  colab_guide.md
notebooks/: alphabuilder-v3-1-kaggle-training.ipynb  alphabuilder-v3-2-kaggle-training.ipynb  alphabuilder-v3-3-kaggle-training.ipynb  kaggle_training.ipynb  kaggle_training.py
scripts/: convert_db_for_kaggle.py  inspect_displacement.py  inspect_last_game.py  migrate_selfplay_volume.py  migrate_v3_1_policy.py  recalculate_warmup_db.py
specs/: CURRENT.md  IMPLEMENTATION_PLAN.md  mcts_spec.md  v3.1_spec.md
tests/: analyze_astar.py  analyze_dataset_quality.py  conftest.py  test_data_mining.py  test_fem_smoke.py  test_integration_v31.py
(+170 files in other folders)
