[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphabuilder"
version = "3.1.0"
description = "AlphaBuilder - Generative Topology Optimization with Deep Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Gustavo Mello"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    # torch is installed via conda with XPU support, do not add here
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "tqdm>=4.60.0",
]
full = [
    "monai>=1.0.0",
    "mpi4py>=3.0.0",
    "fenics-dolfinx>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/gustavomello9600/alphabuild"
Repository = "https://github.com/gustavomello9600/alphabuild"

[tool.setuptools.packages.find]
where = ["."]
include = ["alphabuilder*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["alphabuilder"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

